#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(XBasic, 0.1, buf1024@gmail.com)

# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX(CC g++)
AC_PROG_CC
AC_PROG_MAKE_SET

if test "x$CXX" = "xg++" ; then
    LDFLAGS="$LDFLAGS "
    CXXFLAGS="$CXXFLAGS"
    AR="ar"
    ARFLAGS="$ARFLAGS -r"
    LIB_CXXFLAGS="-shared -fPIC -fpic"
    LIB_LDFLAGS="-shared -fPIC -fpic"
    LIB_SUFFIX="so"
	STATIC_SUFFIX="a"
fi

AC_SUBST(LIB_CXXFLAGS)
AC_SUBST(LIB_LDFLAGS)
AC_SUBST(LIB_SUFFIX)
AC_SUBST(STATIC_SUFFIX)


if test "x$prefix" = "xNONE" ; then
     prefix=`pwd`
fi

# Checks for header files.
#AC_HEADER_STDC
#AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h stdlib.h string.h unistd.h])
# Checks for typedefs, structures, and compiler characteristics.
#AC_HEADER_STDBOOL
#AC_C_CONST
#AC_C_INLINE
#AC_TYPE_SIZE_T
#AC_HEADER_TIME
#AC_STRUCT_TM

# Checks for library functions.
#AC_FUNC_ERROR_AT_LINE
#AC_FUNC_FORK
#AC_FUNC_MKTIME
#AC_FUNC_SELECT_ARGTYPES
#AC_TYPE_SIGNAL
#AC_FUNC_VPRINTF
#AC_CHECK_FUNCS([alarm dup2 gettimeofday inet_ntoa localtime_r memset select socket strcasecmp strerror strrchr strtol])
AC_CHECK_FUNCS([strlwr])

AC_OUTPUT([Src/Makefile
])
